@@ -1,3 +1,9 @@
+2010-11-01  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/gslider.R: added feature for from= being a vector of values
+	(not necessarily regularly spaced)
+	
+
 2010-10-22  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* R/gslider.R: fix bug in check for integer values
